# PerspectiveGenerator

./: CMakeLists.txt  Input.txt  Input2.txt  README.md
Inputfiles/: Input.txt  Input2.txt  InputFile.txt
ProgramDesign/: InputFileFormat  functionList  program design
ProgramDesign/temp/: Input.txt
src/Helper/: HelperStructures.h  MathHelp.cpp  MathHelp.h
src/IO/: ProgramIO.cpp  ProgramIO.h
src/Main/: main.cpp  test.cpp
src/Rendering/: Render.cpp  Render.h
src/Shaders/: FragmentationShader.frag  Shader.frag  Shader.vert  ShaderFunctions.cpp  ShaderFunctions.h  VertexShader.vert
src/Shaders/ShaderIO/: textfile.cpp
src/View/: View.cpp  View.h
temp/: oldCMakeLists.txt
